--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Student List Coding Assignment",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon"
+    "start": "npx nodemon",
+    "test": "jest"
   },
   "author": "Anu Ouseph",
   "license": "ISC",
@@ -18,7 +19,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.2.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.3",
     "typescript": "^5.4.5"
   }
 }
